package rec.app;

message AppData {
  optional int64 last_update_finished = 1;
};